// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that ButtonSkeleton snapshots don't change > renders large variant correctly 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-12uuhtm-MuiSkeleton-root"
      style="width: 140px; height: 56px;"
    />
  </div>
</body>
`;

exports[`Checks that ButtonSkeleton snapshots don't change > renders medium variant correctly 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-12uuhtm-MuiSkeleton-root"
      style="width: 120px; height: 48px;"
    />
  </div>
</body>
`;

exports[`Checks that ButtonSkeleton snapshots don't change > renders small variant correctly 1`] = `
<body>
  <div>
    <span
      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-12uuhtm-MuiSkeleton-root"
      style="width: 100px; height: 40px;"
    />
  </div>
</body>
`;
